kubernetes/apps/media/sonarr/sonarr-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  namespace: media
spec:
  serviceName: sonarr
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: sonarr-volume
          persistentVolumeClaim:
            claimName: sonarr-volume-pvc
        - name: downloads-volume
          persistentVolumeClaim:
            claimName: sonarr-downloads-pvc
        - name: tvshows-volume
          persistentVolumeClaim:
            claimName: sonarr-tvshows-pvc
        - name: tmpvol
          emptyDir:
            medium: Memory
            sizeLimit: 64Mi
      containers:
        - name: sonarr
          image: ghcr.io/onedr0p/sonarr:4.0.1@sha256:4f7b520af6d128385e02b38484a735ece1487ee12cca8b0204f458f2fc39533e
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sonarr-volume
              mountPath: /config
            - name: downloads-volume
              mountPath: /media/downloads
            - name: tvshows-volume
              mountPath: /media/tvshows
            - name: tmpvol
              mountPath: /tmp # Resolve error when using ReadOnly FS: "Failed to create CoreCLR, HRESULT: 0x80004005" - https://github.com/Azure/azure-functions-host/issues/8181 && https://github.com/dotnet/runtime/issues/3168
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  ports:
    - port: 8989
      protocol: TCP
      targetPort: 8989
  selector:
    app: sonarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: sonarr-ingress
  namespace: media
spec:
  ingressClassName: nginx-external
  rules:
    - host: media.${DOMAIN_NAME}
      http:
        paths:
          - path: /sonarr
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
